<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sound</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="buttonPlay">Play</string>
    <string name="buttonPause">Pause</string>
    <string name="buttonStop">Stop</string>
    <string name="videoButtonText">Click here to go to the video player!</string>
    <string name="backToSound">Back to Sound</string>
    <string name="tap">Tap the video to play</string>
    <string name="newVid">Click for a different Video</string>

</resources>
