<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <SeekBar
        android:id="@+id/soundSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/pauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/playButton"
        android:layout_alignBottom="@+id/playButton"
        android:layout_centerHorizontal="true"
        android:text="@string/buttonPause" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pauseButton"
        android:layout_alignBottom="@+id/pauseButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:text="@string/buttonStop" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/soundSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="78dp"
        android:layout_marginLeft="16dp"
        android:text="@string/buttonPlay" />

    <Button
        android:id="@+id/videoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:text="@string/videoButtonText" />

</RelativeLayout>