<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <VideoView
        android:id="@+id/myPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/returnButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="146dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/returnButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:text="@string/tap"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="24dp"
        android:text="@string/backToSound" />

    <Button
        android:id="@+id/newVidButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/returnButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_toRightOf="@+id/returnButton"
        android:text="@string/newVid" />

</RelativeLayout>
